src/test/ui/borrowck/regions-escape-unboxed-closure.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-escape-unboxed-closure.rs:16:27
   |
LL |     with_int(&mut |y| x = Some(y));
   |                           ^^^^^^^

error: unsatisfied lifetime constraints
  --> $DIR/regions-escape-unboxed-closure.rs:16:23
   |
LL |     let mut x: Option<&isize> = None;
   |         ----- lifetime `'2` appears in the type of `x`
LL |     with_int(&mut |y| x = Some(y));
   |                    -  ^^^^^^^^^^^ free region requires that `'1` must outlive `'2`
   |                    |
   |                    lifetime `'1` appears in this argument

error: aborting due to previous error

